@@ -9,6 +9,7 @@ Proj 6.1+, and PostgreSQL 14+.
 * Bug Fixes and Enhancements *
  - #5610, Regression fix: Allow Nan and infinity again
           in ST_SetPoint (Regina Obe)
+ - #5627, Handling of EMPTY components in PiP check (Paul Ramsey)
 
 PostGIS 3.2.6
 2023/11/19
